--- a/Crypto-app/src/index.html
+++ b/Crypto-app/src/index.html
@@ -21,11 +21,6 @@
         <button id="notifyBtn">Notify me when..</button>
       </div>
     </div>
-    <script src="index.js"></script>
-
-    World is full of shit.
-
-    <!-- You can also require other files to run in this process -->
-    <script src="./renderer.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
